Update stash commands

--- a/slides.slim
+++ b/slides.slim
@@ -140,6 +140,8 @@ section
       code git stash # Saves changes to the stash
       code git stash pop # Applies the top most changes
       code git stash save "Not Ready" # Gives the stash a better name
+      code git stash list # List your stashes, top stash will be popped first
+      code git stash show # Show what changed in your last stash
 
   section
     h2 Magical -p operator
